src/styles/pianoroll.scss
$pianoroll-corner:             4px;
$pianoroll-timeline:          40px;
$pianoroll-spacing:           15px;
$pianoroll-keyboard-width:   125px;
$pianoroll-scroll-horizontal: 30px;

// ----------------------------------------------------------------------------
// Piano Roll
// ----------------------------------------------------------------------------
.pianoroll {
  position: absolute;
  top: 15px;
  left: 15px;
  right: 15px;
  bottom: 15px;

  > .timeline-cursor-window {
    top: 1px;
    left: $pianoroll-keyboard-width + 10px - 1px;
    right: 10px + 3px;
    bottom: $pianoroll-scroll-horizontal + 1px;
  }
}

// ----------------------------------------------------------------------------
// Timeline
// ----------------------------------------------------------------------------
.pianoroll-timeline {
  position: absolute;
  top: 0;
  left: $pianoroll-keyboard-width;
  right: 0;
  height: $pianoroll-timeline;

  border: 1px solid #000;
  border-bottom: 0;
  border-radius: $pianoroll-corner $pianoroll-corner 0 0;
  background: #333;

  > canvas {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    width: 100%;

    border-radius: $pianoroll-corner $pianoroll-corner 0 0;
  //height: 100%; // For some reason, causes skewed aspect ratio in chrome Nov 10th 2015 (AK)
  }

  // Inner shadows must be applied in a pseudoelement to cast over the contents
  &::after {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;

    border-radius: $pianoroll-corner - 1px $pianoroll-corner - 1px 0 0;
    box-shadow: inset 1px  1px 3px -1px #000,
                inset -1px 1px 3px -1px #000;
    z-index: 2; // Above scroll-zone
    pointer-events: none;
  }
}

// ----------------------------------------------------------------------------
// Window - Central Editing Area
// ----------------------------------------------------------------------------
.pianoroll-window-frame {
  position: absolute;
  top: $pianoroll-timeline;
  left: $pianoroll-keyboard-width;
  right: 0;
  bottom: 0;

  border: 1px solid #000;
  border-radius: 0 0 $pianoroll-corner $pianoroll-corner;
  background: #444;

  overflow: hidden;

  > canvas {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    width: 100%;

    border-radius: 0 0 $pianoroll-corner 0;
  //height: 100%; // For some reason, causes skewed aspect ratio in chrome Nov 10th 2015 (AK)
  }

  // Inner shadows must be applied in a pseudoelement to cast over the contents
  &::after {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: $pianoroll-scroll-horizontal - 1px;

    border-radius: 0 0 0 0;
    box-shadow: inset 0 0 5px 1px #000;
    z-index: 3; // Above scroll-zone
    pointer-events: none;
  }
}
.pianoroll-window {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: $pianoroll-scroll-horizontal;
  z-index: 1;
  overflow: hidden;
}
.pianoroll-window-sill {
  position: absolute;
  top: 0;
  left: 10px;
  right: 10px;
  bottom: 0;
}
.pianoroll-window-slider {
  position: absolute;  
}
.pianoroll-scrollbar-horizontal {
  position: absolute;
  height: $pianoroll-scroll-horizontal;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 2;

  border-radius: 0 0 $pianoroll-corner $pianoroll-corner;
  padding: 10px;

  pointer-events: none;

  &::after {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;

    border-radius: 0 0 $pianoroll-corner - 1px $pianoroll-corner - 1px;
    box-shadow: inset 1px  -1px 3px -1px #000,
                inset -1px -1px 3px -1px #000;
    z-index: 2; // Above scroll-bar
    pointer-events: none;
  }
}

// ----------------------------------------------------------------------------
// Clips
// ----------------------------------------------------------------------------
.pianoroll-clips {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
.pianoroll-clip {
  position: absolute;
  top: -1px;
  bottom: -1px;
}
.pianoroll-clip-label {
  position: absolute;
  top: 0;
  left: 0;
  right: 1px;
  bottom: 0;

  box-shadow: 0 0 0 1px #000;
  background: rgba(255, 127, 0, 0.125);
}

// ----------------------------------------------------------------------------
// Notes
// ----------------------------------------------------------------------------
.pianoroll-notes {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 1; // Above Clips
}
.pianoroll-notes {
  &[min-height~="1350"] {
    .pianoroll-note-label {
      font-size: 10px;
      padding: 2px;
    }
  }
  &[min-height~="1450"] {
    .pianoroll-note-label {
      font-size: 11px;
      padding: 3px;
    }
  }
  &[max-height~="1275"] {
    .pianoroll-note-label {
      color: transparent;
    }
  }
  &[max-height~="1000"] {
    .pianoroll-note-label {
      border-radius: 1px;
    }
  }
}
// Each note consists of 2 elements: .pianoroll-note and .pianoroll-note-label.
// This is necessary to have accurate percentage position on the wrapper and 1px offset on the child.
.pianoroll-note {
  position: absolute;
  top: 0;
  left: 0;

  &:hover {
    > .pianoroll-note-label {
      background: #FC8;
      background-image: linear-gradient(to bottom, #FC8 0%, #F80 100%);
    }
  }
}
.pianoroll-note-label {
  position: absolute;
  top: 0;
  left: 0;
  right: 1px; // Leave 1px gap between notes that are exactly adjacent
  bottom: 0;

  // border: 1px solid #000;
  border-radius: 2px;
  background: #F80;
  background-image: linear-gradient(to bottom, #F80 0%, #C60 100%);
  box-shadow: 0 0 0 1px #000;

  padding: 1px 2px;
  font-size: 9px;
  line-height: 1;
  color: #000;
  overflow: hidden;
}
@media
only screen and ( min-device-pixel-ratio: 1.3    ),
only screen and ( min-resolution:         120dpi ) {
  .pianoroll-note-label {
    box-shadow: 0 0 2px 0.5px #000;
  }
}

// ----------------------------------------------------------------------------
// Keyboard
// ----------------------------------------------------------------------------
.pianoroll-keyboard {
  position: absolute;
  top: $pianoroll-timeline;
  left: 0;
  width: $pianoroll-keyboard-width - 1px;
  bottom: $pianoroll-scroll-horizontal;
  box-sizing: content-box;

  border: 1px solid #000;
  border-right: 0;
  border-radius: $pianoroll-corner 0 0 $pianoroll-corner;
  z-index: 5; // Above the timeline
  background: #777;
  overflow: hidden;

  // Inner shadows must be applied in a pseudoelement to cast over the contents
  &::after {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;

    border-radius: $pianoroll-corner - 1px 0 0 $pianoroll-corner - 1px;
    box-shadow: inset 2px  3px 3px -1px rgba(0,0,0,0.64),
                inset 2px -3px 3px -1px rgba(0,0,0,0.64);
    z-index: 2; // Above keyboard
    pointer-events: none;
  }
}
.pianoroll-keybed {
  position: absolute;
  right: 0;
  height: 1047px;
  width: 104.7px;
}
$total-keys:  88.00;
$octave-keys: 12.00;
$octave-thickness: percentage($octave-keys/$total-keys);
$key-thickness: percentage(1/$octave-keys);
$key-thickness-margin: percentage(1/$total-keys * 12.5); // Used for margins, which are are calculated based off of width rather than height.
.pianoroll-key {
  display: block;
  position: relative;
  box-sizing: border-box;
  cursor: pointer;
  border-top: 0px;
  height: $key-thickness;
  width: 100%;

  &.white {
    border: 1px solid #000;
    border-right: 0;
    border-top: 0;
    background: #CCC;
    background-image: linear-gradient(90deg, #999 20%, #CCC 21%, #999 100%);
    height: 1.75*$key-thickness;   // Make white keys thicker

    display: flex;
    padding-right: 5%; 
    .pianoroll-key-label {
      visibility: hidden;
      font-size: 10px;
      color: #000;
      align-self: center;
      text-align: right;
      width: 100%;
    }

    &.active,
    &:active {
      background: #A99;
      background-image: linear-gradient(90deg, #988 16%, #CBB 17%, #988 100%);
      box-shadow: inset 0 1px 3px 2px #544;
    }
  }
  &.black {
    position: relative;
    border-radius: 0 2px 2px 0;
    border: 1px solid #222;
    border-bottom-width: 2px;
    background: #222;
    z-index: 1;  // Above the white keys
    height: $key-thickness;    // ...try to cut a pixel off of black keys to prevent asymmetry
    width: 69%;

    &:after {
      content: '';
      display: block;
      position: absolute;
      top: 0;
      right: 8%;
      bottom: 0;
      left: 20%;
      border-radius: 0 20% 20% 0;
      background: #555;
    }
    &:before {
      content: '';
      display: block;
      position: absolute;
      top: -1px;
      left: 100%;
      width: 50%;
      bottom: -2px;

      background-image: linear-gradient(left, rgba(0,0,0,0.25) 0%, transparent 50%);
    }

    // Overlap the adjacent white keys (different amounts depending on where they are on the scale)
    margin: -0.5*$key-thickness-margin 0px -0.5*$key-thickness-margin 0px;
    &.higher {
      margin: -0.75*$key-thickness-margin 0px -0.25*$key-thickness-margin 0px;
    }
    &.lower {
      margin: -0.25*$key-thickness-margin 0px -0.75*$key-thickness-margin 0px;
    }

    &.active,
    &:active {
      border-color: #200;
      border-bottom-width: 1px;
      background: #200;

      &:after {
        left: 10%;
        background: #544;
        box-shadow: inset 0 1px 3px 2px #200;
      }
    }
  }

  &.thinner {
    height: 1.5 * $key-thickness;     // Certain white keys are sandwiched slightly differently to maintain proportions
  }

  &.compact {
    .pianoroll-key-label {
      font-size: 9px;
    }

    &:last-child {
      .pianoroll-key-label {
        visibility: hidden;
      }
    }
  }

  &:last-child {
    > .pianoroll-key-label {
      visibility: visible;
    }
  }
}
.pianoroll-octave {
  position: relative;
  height: $octave-thickness;
  //width: 100px; // Fixed width will 

  &:first-child {
    margin-top: 1px;
    height: percentage(1.0/$total-keys);

    .pianoroll-key {
      height: 100%;
    }
  }

  &:last-child {
    .pianoroll-key {
      &:last-child {
        height: 1.250 * $key-thickness;
        border-radius: 0 0 0 3px;
        border-bottom: 1px solid #000;
      }
    }
  }

  &:hover {
    .pianoroll-key-label {
      visibility: visible !important;
    }
    .pianoroll-key {
      &.black {
        &:before {
          display: none;
        }
      }
    }
  }
}
.pianoroll-octave-label {
  position: absolute;
  top: 0px;
  bottom: 0px;
  right: 100%;
  width: 100px;

  border: 1px solid #000;
  border-top: 0;
  border-right: 0;

  font-size: 12px;
  color: #000;
  display: flex;
  > * {
    align-self: flex-end;
    width: 100%;
    padding-right: 4px;
    padding-bottom: 2px;
    text-align: right;
  }
}

